# speedruns

./: .env  .gitattributes  .gitignore  .glitch-assets  .graphqlconfig  .prettierignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  apollo.config.js  build.rs  client.js  data.json  external-node.js  fortnite.md  git-uncommit  git-wip  git-wipe  index.html  jest.config.js  last-benchmark.txt  module-loader.mjs  next.config.js  now.json  package-lock.json  package.json  run  runs  runs-processed.json  runs.json  rust-toolchain  rustfmt.toml  server.js  service-worker.js  shrinkwrap.yaml  sqlite-string-map.js  (+4 more)
.circleci/: config.yml
.config/configstore/: update-notifier-npm.json
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-support.md
.github/workflows/: actions.yaml  all.yaml
config/: client.js
data/: .gitignore  schema.graphql
data/fixture/: categories.jsonl  games.jsonl  levels.jsonl  runs.jsonl  users.jsonl
data/imported/: categories.jsonl  levels.jsonl
data/normalized/: categories.jsonl  games.jsonl  levels.jsonl  runs.jsonl  users.jsonl
data/supplemental/: runs.json  runs.jsonl  runs.ts  runs.txt
lib/: html.js  iteration.js
public/: index.html  schema.graphql  schema.html
public/assets/graphql/: schema.graphql  schema.json
public/graphql/: .gitignore  schema.apollo.graphql  schema.graphql  schema.html  schema.json  voyager.css  voyager.worker.js
razzle/speedruns/: package.json  razzle.config.js
razzle/speedruns/src/: Home.tsx  client.tsx  index.tsx  server.tsx
s/: html.js  index.html  main.js  style.css
scripts/: benchmark.bash  commit-autofix.bash  export.bash  fix-and-commit  fix.bash  format  format.bash  generate  generate.bash  lint.bash  merge-master-to-stable.bash  prod-start.bash  publish.bash  start  start.bash  test.bash  update.bash
src/: api-patches.js  api_types.rs  client.js  common.js  components.js  data_source.rs  database.rs  extra-runs.js  home.js  html.js  index.html  index.tsx  iteration.js  lib.rs  main.js  main.rs  normalize_api_types.rs  normalized_types.rs  persistent.rs  renter.rs  reports.js  router.js  schema.graphql  service-worker.js  speedrun-patches.js  speedrun.js  speedrun_data.rs  style.css  texty.rs  utils.js  validators.rs
src/api/: mod.rs  normalize.rs  types.rs
src/bester/: README.md  component.js  deps-node.js  external.js  html.js  router.js  utils.js  wiprouter.js
src/bests/: TODO.md  fortnite.md  module-loader.mjs  package.json  server.js  sqlite-string-map.js  watch.json
src/bests/src/: common.js  home.js  index.html  main.js  reports.js  router.js  speedrun.js
src/bests/src/bester/: component.js  deps.js  html.js  style.js  utils.js  wiprouter.js
src/bests/src/data/: runs.js
src/client/: apollo.tsx  duration.tsx  graphql-types.ts  graphql.ts  graphql.tsx  index.tsx  my-games.module.css  my-games.module.scss  my-games.tsx  schema.graphql  styles.module.scss
src/client/__generated__/: GetGameBySlug.ts  GetMyGames.ts  GetUserById.ts  MyGameDetails.ts  TypeNames.ts  schema.graphql
src/components/: auto-color.tsx  duration.tsx  footer.tsx  global.d.ts  header.tsx  leaderboard-table.tsx  loading-block.tsx  my-games.tsx  progression-table.tsx  run-date.tsx  run-duration.tsx  run-links.tsx  run-players.tsx  run-rank.tsx  schema.ts  styles.module.scss  styles.scss
src/components/hooks/: use-debounced.ts  use-nprogress.tsx  with-apollo.tsx
src/data/: base.rs  database.rs  graphql.rs  leaderboard.rs  linked.rs  mod.rs  models.rs  progression.rs  runs.js  types.rs
src/data/graphql/: global_id.rs  mod.rs
src/flamerun/: Cargo.toml  data.json  main.rs  persistent.rs  rustfmt.toml  speedrun_data.rs  texty.rs
src/flamerun/src/: main.rs  speedrun_data.rs
src/lib/: speedruns.rs
src/lib/api/: Cargo.toml  api.rs  normalize.rs  types.rs
src/lib/api/cli/: download.rs  import.rs  mod.rs
src/lib/cli/: Cargo.toml  cli.rs
src/lib/data/: database.rs  graphql.rs  leaderboard.rs  mod.rs  models.rs  progression.rs  types.rs
src/lib/data/graphql/: global_id.rs  schema.juniper.graphql
src/lib/database/: Cargo.toml  database.rs  integrity.rs  mod.rs
src/lib/juniper/: Cargo.toml  cli.rs  global_id.rs  juniper.rs  schema.juniper.graphql
src/lib/models/: Cargo.toml  any.rs  models.rs
src/lib/models/aggregation/: leaderboard.rs  mod.rs  progression.rs
src/lib/types/: Cargo.toml  any.rs  mod.rs  types.rs
src/lib/types/aggregation/: progression.rs
src/lib/types/aggregations/: leaderboard.rs  progression.rs
src/lib/utils/: Cargo.toml  mod.rs  utils.rs
src/pages/: _app.tsx  _document.tsx  graphql.ts  index.tsx  spa-redirect.tsx  yt-timer.html
src/pages-lib/: auto-color.tsx  duration.tsx  footer.tsx  fp.ts  global.d.ts  global.scss  graphql.ts  hash-colored-text.tsx  header.tsx  home.tsx  my-games.tsx  schema.ts  styles.module.scss  use-query-with-status.tsx  with-apollo.tsx
src/pages/[game]/: index.tsx
src/pages/[game]/level/: [level].tsx
src/pages/[game]/run/: [runSrcId].tsx  [run].tsx
src/pages/graphql/: graphiql.tsx  playground.tsx  schema.tsx  voyager.tsx
src/pages/mockup/: index.tsx  styles.module.scss
src/pages/node/: [node].tsx
src/pages/sandbox/: index.tsx  styles.module.scss
src/pages/tools/: yt-timer.tsx
src/pages/user/: [user].tsx
src/server/: mod.rs  path.rs  paths.rs
src/server/static/: design.html  style.css
src/server/views/: mod.rs
src/utils/: mod.rs
tests/: snapshots.test.ts
tests/__snapshots__/: snapshots.test.ts.snap
views/: index.html
