[package]
edition = "2018"
license = "MIT"
name = "speedruns"
version = "0.20.20-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "Unofficial tools for mirroring speedrun.com API data"
repository = "https://github.com/jeremybanks/speedruns"

autobins = false
default-run = "speedruns"

[workspace]

[lib]
name = "speedruns"
path = "src/lib/speedruns.rs"

[[bin]]
name = "speedruns"
path = "src/bin/speedruns.rs"

[profile.release.build-override]
opt-level = 0

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
argh = "0.1.3"
arrayvec = "0.5.1"
async-std = "1.5.0"
base64 = "0.11.0"
chrono = { features = ["serde"], version = "0.4.10" }
clap = "2.32.0"
derive_more = "0.99.2"
env_logger = "0.7.1"
err-derive = "0.1.5"
flate2 = "1.0.13"
fs2 = "0.4.0"
futures = { version = "0.3.4", features = ["compat"] }
getset = "0.0.9"
itertools = "0.8.2"
juniper = "0.14.2"
juniper-from-schema = "0.5.1"
juniper_hyper = "0.5.2"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
no-panic = "0.1.12"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
regex = "1.3.4"
remain = "0.2.1"
reqwest = "0.9.24"
serde = { features = ["derive"], version = "1.0.104" }
serde_derive = "1.0.0"
serde_json = "1.0.47"
sha2 = "0.8.0"
tempfile = "3.1.0"
unidecode = "0.3.0"
url = { features = ["serde"], version = "2.1.1" }
url_serde = "0.2.0"
validator = "0.10.0"
validator_derive = "0.10.0"
heck = "0.3.1"
