[package]
edition = "2018"

name = "speedruns"
version = "0.21.6-dev"

license = "MIT"
repository = "https://github.com/jeremybanks/speedruns"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "Unofficial tools for mirroring speedrun.com API data"

autobins = false

[workspace]

[lib]
name = "speedruns"
path = "src/lib/speedruns.rs"

[[bin]]
name = "speedruns"
path = "src/bin/speedruns.rs"

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
argh = "0.1.3"
async-std = "1.5.0"
base64 = "0.11.0"
chrono = { features = ["serde"], version = "0.4.10" }
derive_more = "0.99.3"
env_logger = "0.7.1"
err-derive = "0.1.6,<0.2"
flate2 = "1.0.13"
getset = "0.1.0"
itertools = "0.8.2"
juniper = "0.14.2"
juniper-from-schema = "0.5.2"
lazy_static = "1.4.0"
libc = "0.2.67"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
regex = "1.3.4"
reqwest = "0.9.24,<0.10"
serde = { features = ["derive"], version = "1.0.104" }
serde_derive = "1.0.104"
serde_json = "1.0.48"
speedruns_api = { path = "src/lib/api", version = "0.21.6-dev" }
speedruns_cli = { path = "src/lib/cli", version = "0.21.6-dev" }
speedruns_database = { path = "src/lib/database", version = "0.21.6-dev" }
speedruns_juniper = { path = "src/lib/juniper", version = "0.21.6-dev" }
speedruns_models = { path = "src/lib/models", version = "0.21.6-dev" }
speedruns_utils = { path = "src/lib/utils", version = "0.21.6-dev" }
tempfile = "3.1.0"
unidecode = "0.3.0"
validator = "0.10.0"
validator_derive = "0.10.0"
rental = "0.5.5"
