[package]
edition = "2018"
license = "MIT"
name = "speedruns_api"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "api.rs"

[dependencies]
anyhow = "1.0.27"
argh = "0.1.3"
base64 = "0.11.0"
chrono = { features = ["serde"], version = "0.4.10" }
derive_more = "0.99.5"
flate2 = "1.0.13"
getset = "0.1.0"
itertools = "0.8.2"
lazy_static = "1.4.0"
libc = "0.2.67"
log = "0.4.8"
rand = "0.7.3"
regex = "1.3.4"
rental = "0.5.5"
reqwest = "0.9.24,<0.10"
serde = { features = ["derive"], version = "1.0.104" }
serde_derive = "1.0.104"
serde_json = "1.0.48"
speedruns_database = { path = "../database", version = "0.21.6-dev" }
speedruns_models = { path = "../models", version = "0.21.6-dev" }
speedruns_utils = { path = "../utils", version = "0.21.6-dev" }
tempfile = "3.1.0"
thiserror = "1.0.14"
validator = "0.10.0"
validator_derive = "0.10.0"