[package]
edition = "2018"
license = "MIT"
name = "speedruns_cli"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "cli.rs"

[dependencies]
anyhow = "1.0.27"
argh = "0.1.3"
log = "0.4.8"
pretty_env_logger = "0.4.0"
speedruns_api = { path = "../api", version = "0.21.6-dev" }
speedruns_database = { path = "../database", version = "0.21.6-dev" }
speedruns_juniper = { path = "../juniper", version = "0.21.6-dev" }
speedruns_models = { path = "../models", version = "0.21.6-dev" }
speedruns_utils = { path = "../utils", version = "0.21.6-dev" }
