[package]
edition = "2018"
license = "MIT"
name = "speedruns_database"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "database.rs"

[dependencies]
chrono = { features = ["serde"], version = "0.4.10" }
derive_more = "0.99.3"
err-derive = "0.1.6,<0.2"
getset = "0.1.0"
itertools = "0.8.2"
lazy_static = "1.4.0"
libc = "0.2.67"
log = "0.4.8"
regex = "1.3.6"
rental = "0.5.5"
serde = { features = ["derive"], version = "1.0.106" }
serde_derive = "1.0.104"
serde_json = "1.0.51"
speedruns_models = { path = "../models", version = "0.21.6-dev" }
speedruns_utils = { path = "../utils", version = "0.21.6-dev" }
validator = "0.10.0"
validator_derive = "0.10.0"
