[package]
edition = "2018"
license = "MIT"
name = "speedruns_juniper"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "juniper.rs"

[dependencies]
actix-cors = "0.2.0"
actix-web = "2.0.0"
argh = "0.1.3"
async-std = "1.5.0"
base64 = "0.12.0"
chrono = { features = ["serde"], version = "0.4.11" }
derive_more = "0.99.5"
err-derive = "0.1.6,<0.2"
flate2 = "1.0.14"
getset = "0.1.0"
itertools = "0.9.0"
juniper = "0.14.2"
juniper-from-schema = "0.5.2"
lazy_static = "1.4.0"
libc = "0.2.69"
log = "0.4.8"
rand = "0.7.3"
regex = "1.3.7"
rental = "0.5.5"
serde = { features = ["derive"], version = "1.0.107" }
serde_derive = "1.0.104"
serde_json = "1.0.51"
speedruns_database = { path = "../database", version = "0.21.6-dev" }
speedruns_models = { path = "../models", version = "0.21.6-dev" }
speedruns_utils = { path = "../utils", version = "0.21.6-dev" }
validator = "0.10.0"
validator_derive = "0.10.0"
