[package]
edition = "2018"
license = "MIT"
name = "speedruns_types"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "types.rs"

[dependencies]
derive_more = "0.99.3"
err-derive = "0.1.5"
log = "0.4.8"
no-panic = "0.1.12"
unidecode = "0.3.0"
