[package]
edition = "2018"
license = "MIT"
name = "speedruns_utils"
version = "0.21.6-dev"
authors = ["Jeremy Banks <_@jeremy.ca>"]
description = "subpackage of speedruns"
repository = "https://github.com/jeremybanks/speedruns"

[lib]
path = "utils.rs"

[dependencies]
derive_more = "0.99.5"
log = "0.4.8"
thiserror = "1.0.14"
